--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=8080
+server.port=8082
 server.servlet.context-path=/api
 
 # Database Configuration
@@ -8,11 +8,37 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.auto-commit=false
+
+# Transaction Configuration
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+spring.transaction.default-timeout=30
+spring.jpa.open-in-view=false
+
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers_skip_column_definitions=true
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.query.fail_on_pagination_over_collection_fetch=true
+spring.jpa.properties.hibernate.query.plan_cache_max_size=2048
+spring.jpa.properties.hibernate.jdbc.fetch_size=50
 
 # Flyway Configuration
 spring.flyway.enabled=true
@@ -28,8 +54,10 @@ spring.servlet.multipart.max-request-size=10MB
 logging.level.com.accounting=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=INFO
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
 
-# Add these lines
+# Error Configuration
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always 
