--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Server Configuration
-server.port=8082
-server.servlet.context-path=/api
+server.port=8081
+
+# API Configuration
+spring.mvc.servlet.path=/api
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/accounting
@@ -60,4 +62,7 @@ logging.level.org.springframework.orm.jpa=DEBUG
 # Error Configuration
 server.error.include-message=always
 server.error.include-binding-errors=always
-server.error.include-stacktrace=always 
+server.error.include-stacktrace=always
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false 
